--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Kontti LEMP Esimerkki</title>
+  <meta charset="UTF-8" />
+  <title>Frontend (Nginx) konteilla cicd</title>
 </head>
 <body>
   <h1>Frontend (Nginx) konteilla cicd</h1>
-  <div id="msg">Loading...</div>
-  <script>
-    fetch('/lastweek/api')
-      .then(r => r.json())
-      .then(d => { document.getElementById('msg').innerText = d.message; })
-      .catch(e => { document.getElementById('msg').innerText = 'API error: ' + e; });
-  </script>
+  <button id="btn">Kutsu APIa</button>
+  <pre id="result"></pre>
 
-  <div id="time">Loading time...</div>
   <script>
-    fetch('/lastweek/api/time')
-      .then(r => r.json())
-      .then(d => { document.getElementById('time').innerText = d.time; })
-      .catch(e => { document.getElementById('time').innerText = 'API error: ' + e; });
+    document.getElementById("btn").addEventListener("click", async () => {
+      try {
+        // HUOM: suhteellinen polku, koska app asuu /cicd alla hostilla
+        // mutta kontissa tämä on vain /api/...
+        const response = await fetch("/api/db");
+        const data = await response.json();
+        document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById("result").textContent = "API error: " + err;
+      }
+    });
   </script>
-
 </body>
 </html>
