--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Frontend (Nginx) konteilla CI/CD</h1>
   <button id="btn">Kutsu APIa</button>
-  <pre id="result">Tässä näkyy tulos...</pre>
+  <pre id="result">Tässä pitäisi näkyä tulos...</pre>
 
   <script>
     document.getElementById("btn").addEventListener("click", async () => {
